Pregătit pentru Android build

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.tu.lovable",
-  "appName": "LovableApp",
+  "appId": "com.robert.quakealert",
+  "appName": "QuakeAlert",
   "webDir": "www"
 }
